# moestation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig
src/: main.cpp  main.zig
src/common/: extend.zig  file.cpp  file.hpp  min_max.zig  types.hpp
src/core/: bus.zig  cdvd.zig  cop0.zig  cop0_iop.zig  cop1.zig  cpu.zig  dmac.zig  dmac_iop.zig  gif.zig  gs.zig  intc.cpp  intc.hpp  intc.zig  iop.zig  moestation.cpp  moestation.hpp  scheduler.cpp  scheduler.hpp  sif.cpp  sif.hpp  sif.zig  sio2.zig  spu2.zig  timer.zig  timer_iop.zig  vif1.zig  vu.zig  vu0.zig  vu_int.zig
src/core/bus/: bus.cpp  bus.hpp  rdram.cpp  rdram.hpp
src/core/ee/cpu/: cop0.cpp  cop0.hpp  cpu.cpp  cpu.hpp  fpu.cpp  fpu.hpp
src/core/ee/dmac/: dmac.cpp  dmac.hpp
src/core/ee/gif/: gif.cpp  gif.hpp
src/core/ee/ipu/: ipu.cpp  ipu.hpp
src/core/ee/pgif/: pgif.cpp  pgif.hpp
src/core/ee/timer/: timer.cpp  timer.hpp
src/core/ee/vif/: vif.cpp  vif.hpp
src/core/ee/vu/: vu.cpp  vu.hpp  vu_int.cpp  vu_int.hpp
src/core/gif/: gif.cpp  gif.hpp
src/core/gs/: gs.cpp  gs.hpp
src/core/iop/: cop0.cpp  cop0.hpp  gte.cpp  gte.hpp  iop.cpp  iop.hpp
src/core/iop/cdrom/: cdrom.cpp  cdrom.hpp
src/core/iop/cdvd/: cdvd.cpp  cdvd.hpp
src/core/iop/dmac/: dmac.cpp  dmac.hpp
src/core/iop/sio2/: sio2.cpp  sio2.hpp
src/core/iop/spu2/: spu2.cpp  spu2.hpp
src/core/iop/timer/: timer.cpp  timer.hpp
